--- a/config-data/product-service.yml
+++ b/config-data/product-service.yml
@@ -6,7 +6,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/ZeroXD219/pea4.git
+          uri: https://github.com/ZeroXD219/pa3.git
           searchPaths: config-data
           username: andyllamodiaz@gmail.com
           password: 123Andy123@
